<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TipText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignWithParentIfMissing="true"
    android:backgroundTint="#6E6969"
    android:foregroundTint="#100F0F"
    android:onClick="onClick"
    tools:context=".TipCalculatorActivity"
    tools:ignore="UsingOnClickInXml">

    <TextView
        android:id="@+id/CheckAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:text="@string/check_amount"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/checkAmountValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/partySizeValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="45dp"
        android:text="@string/party_size"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/partySizeValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckAmountText" />

    <EditText
        android:id="@+id/checkAmountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CheckAmountText"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/partySizeValue"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAmountValue"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="211dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tip"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTipText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partySizeValueText" />

    <TextView
        android:id="@+id/fifteenPercentTipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="63dp"
        android:text="@string/_15total"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/fifteenPercentTotalText"
        app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTipValue"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/TipsAndTotalText" />

    <TextView
        android:id="@+id/fifteenPercentTotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="3dp"
        android:text="@string/_15total"
        app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTotalValue"
        app:layout_constraintStart_toEndOf="@+id/TotalText"
        app:layout_constraintTop_toBottomOf="@+id/fifteenPercentTipText" />

    <TextView
        android:id="@+id/TotalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="63dp"
        android:text="@string/total"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTotalText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/twentyfivePercentTipValue"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="27dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/TwentyfivePercentTipText"
        app:layout_constraintTop_toBottomOf="@+id/partySizeValue"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/fifteenPercentTipValue"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/twentyPercentTipText"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTipText"
        app:layout_constraintTop_toBottomOf="@+id/TipsAndTotalText"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/TwentyfivePercentTipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_25"
        app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTipValue"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTipValue"
        app:layout_constraintTop_toBottomOf="@+id/TipsAndTotalText" />

    <EditText
        android:id="@+id/twentyPercentTipValue"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="27dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTipText"
        app:layout_constraintTop_toBottomOf="@+id/TipsAndTotalText"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/twentyPercentTipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="4dp"
        android:text="@string/_20"
        app:layout_constraintEnd_toStartOf="@+id/twentyPercentTipValue"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTipValue"
        app:layout_constraintTop_toBottomOf="@+id/TipsAndTotalText"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/fifteenPercentTotalValue"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTotalText"
        app:layout_constraintTop_toBottomOf="@+id/fifteenPercentTipValue"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/twentyPercentTotalValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:text="@string/_20Total"
        app:layout_constraintEnd_toStartOf="@+id/twentyPercentTotalValue"
        app:layout_constraintStart_toEndOf="@+id/fifteenPercentTotalValue"
        app:layout_constraintTop_toBottomOf="@+id/twentyPercentTipText" />

    <TextView
        android:id="@+id/twentyfivePercentTotalValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:text="@string/_25Total"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTotalValue"
        app:layout_constraintTop_toBottomOf="@+id/TwentyfivePercentTipText" />

    <EditText
        android:id="@+id/twentyfivePercentTotalValue"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toEndOf="@+id/twentyfivePercentTotalValueText"
        app:layout_constraintTop_toBottomOf="@+id/twentyfivePercentTipValue"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/twentyPercentTotalValue"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="5dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTotalValueText"
        app:layout_constraintStart_toEndOf="@+id/twentyPercentTotalValueText"
        app:layout_constraintTop_toBottomOf="@+id/twentyPercentTipValue"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#BCB7B7"
        android:onClick="onClick"
        android:text="@string/compute_tip"
        android:textColor="#151414"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TipsAndTotalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partySizeValue"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/TipsAndTotalText"
        android:layout_width="271dp"
        android:layout_height="36dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="81dp"
        android:text="@string/tips_and_totals_per_person"
        android:textColor="#101010"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:foregroundGravity="center|center_horizontal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

</androidx.constraintlayout.widget.ConstraintLayout>